<?php

namespace App\Enums;

enum CustomerType: string
{
    case New = 'new';
    case Loyal = 'loyal';
}
